--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>The data was grabed from darksky.com</p>
         <img src="/img/robot.png" class="portrait">
     </div>
     
